Screensize is fixed at 800x600. Need to test it works on laptop. Bugs: text in top left corner, enemies start too close to player, could improve performance by only animating within a certain range of player.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,11 @@ body{
 	visibility: hidden;
 }
 
+#game-div{
+	width: 50%;
+	margin: auto;
+}
+
 
 /*h1 { font-family: "SquaredDisplay", sans-serif }*/
 h1 { font-family: "Tesla", sans-serif }
